--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,56 +4,72 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_color"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/login_btn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/custom_button"
-        android:text="@string/login"
-        android:textSize="24sp"
-        android:textStyle="bold"
+    <EditText
+    android:id="@+id/Username_Login"
+    android:layout_width="314dp"
+    android:layout_height="67dp"
+    android:layout_marginTop="260dp"
+    android:autofillHints=""
+    android:drawableStart="@drawable/icon_username"
+    android:ems="10"
+    android:hint="@string/enter_username_here"
+    android:inputType="textPersonName"
+    android:textColor="#9F9898"
+    android:textColorHint="#DF958E8E"
+    android:backgroundTint="@color/colorPrimary"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.497"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/password_login"
+        android:layout_width="313dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="36dp"
+        android:autofillHints=""
+        android:backgroundTint="@color/colorPrimary"
+        android:drawableStart="@drawable/icon_password"
+        android:ems="10"
+        android:hint="@string/enter_password_here"
+        android:inputType="textPassword"
+        android:textColor="#9F9898"
+        android:textColorHint="#DF958E8E"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />
+        app:layout_constraintTop_toBottomOf="@+id/Username_Login" />
 
     <Button
-        android:id="@+id/register_btn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
+        android:id="@+id/login"
+        android:layout_width="309dp"
+        android:layout_height="34dp"
         android:background="@drawable/custom_button"
-        android:text="@string/register"
-        android:textSize="24sp"
-        android:textStyle="bold"
+        android:text="@string/login_text_forbtn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_btn"
-        app:layout_constraintVertical_bias=".15" />
+        app:layout_constraintTop_toBottomOf="@+id/password_login"
+        app:layout_constraintVertical_bias="0.228" />
 
     <TextView
-        android:id="@+id/welcome_text"
-        style="@style/CustomText"
-        android:layout_width="0dp"
+        android:id="@+id/textView_register"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="16dp"
-        android:gravity="center"
-        android:text="@string/welcome_text"
-        android:textAllCaps="false"
-        android:textSize="72sp"
-        android:textStyle="bold|italic"
+        android:text="@string/textforegisterTxtView"
+        android:textColor="#DF958E8E"
+        android:textSize="14sp"
+        android:textStyle="normal|bold"
+        android:background="#00000000"
+        android:onClick="launchRegistrationScreen"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/login"
+        app:layout_constraintVertical_bias="0.263" />
 </androidx.constraintlayout.widget.ConstraintLayout>
